<resources>
    <string name="app_name">Crudités</string>
    <string name="inscription">Inscription</string>
    <string name="num_ro_d_identification">Numéro d\'identification</string>
    <string name="rotation">Faire pivoter</string>
    <string name="changer_d_image">Changer d\'image</string>
    <string name="nom">NOM</string>
    <string name="prenom">Prénom</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="lieu_de_naissance">Lieu de naissance</string>
    <string name="profession">Profession</string>
    <string name="entreprise">Entreprise</string>
    <string name="ville_de_r_sidence">Ville de résidence</string>
    <string name="quartier_de_r_sidence">Quartier de résidence</string>
    <string name="adresse_email">Adresse email</string>
    <string name="telephone">Numéro de téléphone</string>
    <string name="sinscrire">S\'inscrire</string>
    <string name="saisir_mon_identifiant">Saisir mon identifiant</string>
    <string name="welcome_crudites">Bienvenue dans l\'univers Crudités</string>

    <string name="crudites">Crudités</string>
    <string name="playlist">Playlist</string>
    <string name="ambassadeur">Ambassadeur</string>
    <string name="profil">Profil</string>
    <string name="preciser">Préciser</string>

    <string name="text1">The museum is housed in the Louvre Palace, originally built as a fortress in the late 12th century…</string>
    <string name="text2">Gwanghwamun is the main and largest gate of Gyeongbokgung Palace, in Jongno-gu, Seoul, South Korea.</string>
    <string name="text3">Tower Bridge is a combined bascule and suspension bridge in London built in 1886–1894.</string>
    <string name="text4">The Temple of Heaven is an imperial complex of religious buildings situated in the southeastern part…</string>
    <string name="text5">The Aegean Islands are within the sea and some bound it on its southern periphery…</string>
    <string name="pack_crudite">Pack crudités</string>
    <string name="univers_crudite">L’univers CRUDITÉS</string>
    <string name="champs_expertise">Nos champs d’expertises à votre portée</string>
    <string name="bon_plan"><![CDATA[Bons plans & promo Crudité]]></string>
    <string name="quizz_thematique"><![CDATA[Quiz & thématiques de la semaine]]></string>
    <string name="newsletter">S’inscrire à la NewsLetter</string>
    <string name="boite_suggestion">Boîte à suggestions / nos axes de progrès</string>
    <string name="nous_joindre">Nous joindre</string>
    <string name="mon_profil">Mon profil</string>
    <string name="localisation_entreprise">Localisation de l\'entreprise</string>
    <string name="je_n_ai_pas_recu_de_code">Je n\'ai pas recu de code</string>
    <string name="saisir_activation_inscription">Saisir le code d\'activation envoyé après votre inscription</string>
    <string name="saisir_activation_register">Saisir le code d\'activation envoyé au numéro</string>
    <string name="sur_place">Sur place</string>
    <string name="en_enseigne_crudit_s_vip">En enseigne Crudités VIP</string>
    <string name="precedent">Précédent</string>
    <string name="suivant">Suivant</string>
    <string name="horaire_de_livraison">Horaire de livraison</string>
    <string name="lieu_de_d_gustation">Lieu de dégustation</string>
    <string name="jour_pour_la_r_servation">Jour pour la réservation</string>
    <string name="tranche_horaire">Tranche horaire</string>
    <string name="nombre_de_personne">Nombre de personne</string>
    <string name="choix_de_la_table">Choix de la table</string>
    <string name="verifier_connexion">Vérifiez votre connexion internet et réessayez</string>
    <string name="tarifaire">Tarifaire</string>
    <string name="mode_de_r_glement">Mode de règlement</string>
    <string name="attentes_particuli_res">Attentes Particulières</string>
    <string name="reserver">Réserver</string>
    <string name="commander">Commander</string>
    <string name="laisser_un_message_particuler">Laisser un message particuler</string>
    <string name="bouteille_d_eau_min_rale">Bouteille d\'eau minérale</string>
    <string name="tasse_de_th">Tasse de thé</string>
    <string name="choix_d_un_instrumental">Choix d’un instrumental</string>
    <string name="reserver_un_ipad_pour_choix_de_musique">Le choix s’effectue sur ordre des réservations à partir d’un iPad – Apple, mis à votre disposition</string>
    <string name="message_personnalis">Message personnalisé</string>
    <string name="choisir_mode_reglement">Veuillez choisir un mode de règlement</string>
    <string name="veuillez_patienter">Veuillez patienter...</string>
    <string name="commande_enregistre">Commande Enregistrée</string>
    <string name="cancel">Annuler</string>
    <string name="decouvrer_contenu_pack">Découvrez en toute exclusivité le contenu integral de votre pack crudités</string>
    <string name="autres">Autres</string>
    <string name="wifi">Wifi</string>
    <string name="the_ambassador">The Ambassador</string>
    <string name="ambassadeur_text"><![CDATA[<p align=\"justify\">     <strong>Très simple !!!</strong> </p> <p align=\"justify\">     Faites le maximum de recommandations en ligne à partir de l’application     CRUDITÉS (voir rubrique recommander à un ami de votre Profil) pouvant se solder par un acte d’achat et recevez officiellement votre <strong>GOLD AMBASSADOR</strong> « <strong>         CRUDITÉS CARD </strong> » <strong>vous donnant accès à de nombreux avantages, ainsi qu’un         Gift personnalisé CRUDITÉS et bien d’autres surprises à découvrir     </strong>     . </p>]]></string>
    <string name="veuillez_nous_envoyer_par_courriel_ci_dessous_vos_recommandations">Veuillez nous envoyer par courriel ci-dessous vos recommandations.</string>
    <string name="un_questionnaire">Un questionnaire vous sera également transmis périodiquement à travers nos divers réseaux sociaux.</string>
    <string name="expertise"><![CDATA[<ul>     <li>         <p align=\"left\">             <em>In your Office</em>             (nos livraisons de CRUDITÉS dans vos bureaux et autres lieux à             votre convenance pour vous embarquer sur les sphères de la             performance)         </p>     </li>     <li>         <p align=\"justify\">             <em>Inside Your Bright Universe</em>             (un accueil chaleureux et unique vous est réservé dans les locaux             ou enseigne VIP CRUDITÉS, aménagés exclusivement pour vous procurer             un confort inédit, dans une ambiance reposante, estivale et de             rêve)         </p>     </li>     <li>         <p align=\"justify\">             <em>Partner</em>             E<em>vent</em> (nous déployons notre savoir faire exclusif, à             partir d’un packaqe thématique spécialement conçu pour le             rayonnement de vos événements, : rencontres, dîners, foires etc.)         </p>     </li> </ul>]]></string>
</resources>
