<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:background="#f8f8f8"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_20sdp"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="50dp"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_height="30dp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:background="#f0f0f0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:background="#f8f8f8"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAllCaps="true"
                    android:gravity="center_horizontal"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/mode_de_r_glement"/>
            </RelativeLayout>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_view"></android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/colorDark"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/prev"
            android:text="@string/precedent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:id="@+id/next"
            android:gravity="right"
            android:text="@string/suivant"/>
    </LinearLayout>
</RelativeLayout>