<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="68dp"
    sothree:umanoShadowHeight="4dp"
    sothree:umanoParallaxOffset="100dp"
    sothree:umanoDragView="@+id/dragView"
    sothree:umanoOverlay="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="match_parent"
        tools:context="com.crudite.apps.RegisterActivity">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_close"
            android:layout_marginTop="10dp"
            android:alpha="0.7"
            android:id="@+id/close"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginTop="10dp"
            android:text="@string/inscription"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_40sdp"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp">
                <RelativeLayout
                    android:layout_gravity="center_horizontal"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:id="@+id/selectImage"
                        android:src="@drawable/profile"
                        android:layout_marginTop="10dp"
                        app:civ_border_color="@color/colorBlue"
                        app:civ_border_width="1dp"/>
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="5dp"
                        android:src="@mipmap/ic_add_blue"
                        />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textAllCaps="true"
                        android:textColor="#a9a8a8"
                        android:text="@string/nom"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/nom"
                        android:textColor="#181818"
                        android:textColorHint="#181818"
                        android:background="@null"
                        android:hint="Ex : John"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#dfdfdf"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textAllCaps="true"
                        android:textColor="#a9a8a8"
                        android:text="@string/prenom"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/prenom"
                        android:textColor="#181818"
                        android:textColorHint="#181818"
                        android:background="@null"
                        android:hint="Ex : Doe"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#dfdfdf"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textAllCaps="true"
                        android:textColor="#a9a8a8"
                        android:text="@string/date_de_naissance"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:id="@+id/date_naissance"
                        android:textColor="#181818"
                        android:textColorHint="#181818"
                        android:background="@null"
                        android:hint="Ex : 20/05/1993"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#dfdfdf"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textAllCaps="true"
                        android:textColor="#a9a8a8"
                        android:text="@string/lieu_de_naissance"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/lieu_naissance"
                        android:textColor="#181818"
                        android:textColorHint="#181818"
                        android:background="@null"
                        android:hint="Ex : Douala"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#dfdfdf"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textAllCaps="true"
                        android:textColor="#a9a8a8"
                        android:text="@string/profession"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/profession"
                        android:textColor="#181818"
                        android:textColorHint="#181818"
                        android:background="@null"
                        android:hint="Ex : Comptable"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#dfdfdf"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textAllCaps="true"
                        android:textColor="#a9a8a8"
                        android:text="@string/entreprise"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/entreprise"
                        android:textColor="#181818"
                        android:textColorHint="#181818"
                        android:background="@null"
                        android:hint="Ex : Camtel"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#dfdfdf"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textAllCaps="true"
                        android:textColor="#a9a8a8"
                        android:text="@string/localisation_entreprise"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/localisation_entreprise"
                        android:textColor="#181818"
                        android:textColorHint="#181818"
                        android:background="@null"
                        android:hint="Ex : Douala akwa"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#dfdfdf"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textAllCaps="true"
                        android:textColor="#a9a8a8"
                        android:text="@string/ville_de_r_sidence"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/ville"
                        android:textColor="#181818"
                        android:textColorHint="#181818"
                        android:background="@null"
                        android:hint="Ex : Douala"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#dfdfdf"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textAllCaps="true"
                        android:textColor="#a9a8a8"
                        android:text="@string/quartier_de_r_sidence"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/quartier"
                        android:textColor="#181818"
                        android:textColorHint="#181818"
                        android:background="@null"
                        android:hint="Ex : Makepe"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#dfdfdf"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textAllCaps="true"
                        android:textColor="#a9a8a8"
                        android:text="@string/adresse_email"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:id="@+id/email"
                        android:textColor="#181818"
                        android:textColorHint="#181818"
                        android:background="@null"
                        android:hint="Ex : abc@example.com"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#dfdfdf"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textAllCaps="true"
                        android:textColor="#a9a8a8"
                        android:text="@string/telephone"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/telephone"
                        android:textColor="#181818"
                        android:textColorHint="#181818"
                        android:background="@null"
                        android:hint="Ex : 650777777"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="#dfdfdf"/>
                </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sinscrire"
                    android:id="@+id/save"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorPrimary"/>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <include android:id="@+id/dragView"
        layout="@layout/layout_add_picture"></include>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>
